# QtAcademyDay5

./: CMakeLists.txt  Main.qml  main.cpp  radiatorvalvecontroller.cpp  radiatorvalvecontroller.h  virtualtemperature.cpp  virtualtemperature.h
